flex style guide

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,38 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import './flex.css';
+
+@layer components {
+  .abs-top {
+    position: absolute;
+    top: 0px;
+    z-index: 0;
+  }
+  .abs-bot {
+    position: absolute;
+    bottom: 0px;
+  }
+  .abs-bl {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+  }
+  .abs-br {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+  }
+  .abs-tl {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 0;
+  }
+  .full-screen{
+    width: 100vw;
+    height: 100vh;
+  }
+};
+
