--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,31 +5,12 @@
 @import './flex.css';
 
 @layer components {
-  .abs-top {
-    position: absolute;
-    top: 0px;
-    z-index: 0;
-  }
-  .abs-bot {
-    position: absolute;
-    bottom: 0px;
-  }
-  .abs-bl {
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-  }
-  .abs-br {
-    position: absolute;
-    bottom: 0px;
-    right: 0px;
-  }
-  .abs-tl {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: 0;
-  }
+  .abs-top { @apply absolute top-o z-0; }
+  .abs-bot { @apply absolute bottom-0; }
+  .abs-bl { @apply absolute bottom-0 left-0; }
+  .abs-br { @apply absolute bottom-0 right-0; }
+  .abs-tl { @apply absolute bottom-0 right-0 z-0; }
+
   .full-screen{
     width: 100vw;
     height: 100vh;
