--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,20 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-@import './flex.css';
+@import "./flex.css";
 
 @layer components {
-  .abs-top { @apply absolute top-o z-0; }
-  .abs-bot { @apply absolute bottom-0; }
-  .abs-bl { @apply absolute bottom-0 left-0; }
-  .abs-br { @apply absolute bottom-0 right-0; }
-  .abs-tl { @apply absolute bottom-0 right-0 z-0; }
+  .abs-top {
+    @apply top-o absolute z-0;
+  }
+  .abs-bot {
+    @apply absolute bottom-0;
+  }
+  .abs-bl {
+    @apply absolute bottom-0 left-0;
+  }
+  .abs-br {
+    @apply absolute bottom-0 right-0;
+  }
+  .abs-tl {
+    @apply absolute bottom-0 right-0 z-0;
+  }
 
-  .full-screen{
+  .full-screen {
     width: 100vw;
     height: 100vh;
   }
-};
+}
 
 @layer utilities {
   @variants responsive {
@@ -50,12 +60,35 @@
 
     /* Hide scrollbar for IE, Edge and Firefox */
     .no-scrollbar {
-      -ms-overflow-style: none;  /* IE and Edge */
-      scrollbar-width: none;  /* Firefox */
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
     }
   }
 }
 
 body {
   @apply no-scrollbar;
+}
+
+/* file upload button */
+input[type="file"]::file-selector-button {
+  border-radius: 4px;
+  padding: 0 16px;
+  height: 40px;
+  cursor: pointer;
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.05);
+  margin-right: 16px;
+  transition: background-color 200ms;
+}
+
+/* file upload button hover state */
+input[type="file"]::file-selector-button:hover {
+  background-color: #f3f4f6;
+}
+
+/* file upload button active state */
+input[type="file"]::file-selector-button:active {
+  background-color: #e5e7eb;
 }
