--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -62,6 +62,16 @@
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   }
+
+  /*
+  .shadow-top-bottom {
+    box-shadow: inset 0 0px 12px 8px rgba(0, 0, 0, 0.4);/*, inset 0 -2px 8px 0 rgba(0, 0, 0, 0.6);
+  }
+    */
+  .shadow-inner-top-bottom {
+      box-shadow: 0px 20px 15px -22px rgba(0,0,0,0.45) inset, 0px -20px 15px -22px rgba(0,0,0,0.45) inset;
+  }
+
 }
 
 body {
