--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,9 +64,10 @@
   }
 
   .shadow-inner-top-bottom {
-      box-shadow: 0px 20px 15px -22px rgba(0,0,0,0.45) inset, 0px -20px 15px -22px rgba(0,0,0,0.45) inset;
+    box-shadow:
+      0px 20px 15px -22px rgba(0, 0, 0, 0.29) inset,
+      0px -20px 15px -22px rgba(0, 0, 0, 0.29) inset;
   }
-
 }
 
 body {
